Refactor: Edited login eye icon styling on password show/hide

--- a/html/UserLogIn.html
+++ b/html/UserLogIn.html
@@ -51,11 +51,10 @@
                       <label class="form-label mt-2" for="passwordLogin">Password</label>
                       <input type="password" id="passwordLogin" class="form-control form-control-lg" /> 
                     </div>
-                    <div class="spanEye">
-                      <span class="fa-sharp fa-solid fa-eye-slash" onclick="toggle()" id="togglePassword"></span>
-                      <span class="fa-sharp fa-solid fa-eye d-none"></span>
-                    </div>
-                    
+                    <a class="spanEye" id="icon-click">
+                      <span class="fa-solid fa-eye-slash" id="togglePassword"></span>
+                      <!-- <span class="fa-solid fa-eye d-none"></span> -->
+                    </a>
                   </div>
 
                   <div class="d-flex justify-content-center">
